22 July 2004 Efi Fogel
- Added missing directive statements to prevent multiple inclusion in Sturm.h

18 June 2004 Andreas Fabri
- Added missing std:: in Sturm.h

07 May 2004 Andreas Fabri
- Added $(RANLIB) $(CGAL_CORE_LIB) in makefile_Core (for Darwin, reported by Menelaos)

Version 0.20 (09 February 2004) [rursu]
- Updated headers in examples

Version 0.19 (17 October 2003) [af]
- Added Workaround for VC7.1

Version 0.18 (9 October 2003) [af]
- added CORE_INLINE to some declarations, because they are at definition
- helped Sgi to match sqrt function

Version 0.17 (7 October 2003) [af]
- Moved the body of function ceilLg5 from ExprRep.h to Expr.cpp

Version 0.16 (4 October 2003)
- Removed duplicate definitions

Version 0.15 (1 October 2003)
- Copied  ceilLg5, BIG, and log_5 from Expr.cpp to include/CORE/ExprRep.h

Version 0.14 (1 October 2003)
- Moved template code from Expr.cpp to include/CORE/ExprRep.h

Version 0.13 (1 October 2003)
- Fixed makefile and example as we now have the macro CGAL_USE_CORE

Version 0.12 (15 September 2003)
- Going back to the previous version that worked for all compilers but VC 7.1

Version 0.11 (12 September 2003) [af]
- bug fix for VC7.1
- Added some CORE_INLINEs

Version 0.10 (6 August 03) [af]
- Added assignment operator and bug in destructor of Sturm.h

Version 0.9 (30 July 03) [af]
- Fixed typo in makefile_Core

Version 0.8 (4 July 03) [af]
- Replaced CORE.lib with $(CGAL_CORE_LIB) to get it platform independent

Version 0.7 (30 June 03) [af]
- Replaced SUFFIXES with .SUFFIXES

Version 0.6 (30 June 03) [af]
- Added  SUFFIXES: .cpp $(SUFFIXES)  to src/Core/Makefile_Core