@@ -1,3 +1,8 @@
+27 July 2004 Efi Fogel
+- Added the method 'int numberOfRoots() const' to poly/Sturm.h. While this
+method may not work very well in this version, it is fully supported in the
+comming new version
+
 22 July 2004 Efi Fogel
 - Added missing directive statements to prevent multiple inclusion in Sturm.h
 
